# Inq-Wannier-Fork

./: .configure-custom.sh  .gitignore  .gitlab-ci-llnl.yml  .gitlab-ci.yml  .gitmodules  .valgrind_suppressions  CMakeLists.txt
.github/workflows/: macos.yml
4x4x4_long/: silicon_real_time.cpp
6x6x6_small_kick/: silicon_real_time.cpp
benchmarks/: CMakeLists.txt
ci/: cmake_gnu.sh  install_gnu.sh  install_nvcc.sh
docs/source/: Doxyfile.in  code.rst  conf.py  index.rst  installation.rst  introduction.rst  theory.rst  tutorials.rst  units.rst
docs/source/_static/: inq.css
docs/source/_templates/: breadcrumbs.html
examples/: CMakeLists.txt  Si64.cpp  benzene.cpp  benzene_nomlwf.cpp  helium_dimer.cpp  inq_mdi.cpp  inq_mdi.h  inq_mdi_driver.cpp  silicon_real_time.cpp
external_libs/: CMakeLists.txt
external_libs/gpurun/: CMakeLists.txt
external_libs/gpurun/include/gpu/: array.hpp  atomic.hpp  cpu_run.hpp  run.hpp
m4/: ax_cxx_compile_stdcxx.m4
projects/: CMakeLists.txt
python/: CMakeLists.txt
scripts/: inc++.bash.in
share/unit_tests_data/: al_ixs.poscar
speed_tests/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am
src/adaptors/: openbabel.hpp
src/awannier/: jacobi_eigenvalue.hpp  jade_complex.hpp  plane_rot.hpp  tdmlwf_trans.hpp
src/basis/: containing_cube.hpp  field.hpp  field_set.hpp  spherical_grid.hpp
src/config/: path.hpp
src/eigensolvers/: davidson.hpp  steepest_descent.hpp
src/gpu/: atomic.hpp  run.hpp
src/ground_state/: calculate.hpp  calculator.hpp  initial_guess.hpp  subspace_diagonalization.hpp
src/hamiltonian/: calculate_energy.hpp  energy.hpp  forces.hpp  ks_hamiltonian.hpp  projector.hpp  projector_all.hpp  projector_fourier.hpp  self_consistency.hpp  xc_functional.hpp
src/input/: interaction.hpp  parallelization.hpp  parse_xyz.hpp
src/inq/: inq.hpp
src/ions/: unit_cell.hpp
src/main/: unit_tests.cpp
src/math/: complex.hpp  spinor.hpp  vector3.hpp
src/matrix/: diagonalize.hpp
src/mixers/: broyden.hpp  linear.hpp
src/observables/: berkeleygw.hpp  current.hpp  density.hpp  dipole.hpp  forces_stress.hpp  kinetic_energy_density.hpp  mlwf_properties.hpp  spectrum.hpp
src/operations/: divergence.hpp  gradient.hpp  io.hpp  matrix_operator.hpp  orthogonalize.hpp  overlap.hpp  overlap_diagonal.hpp  randomize.hpp  space.hpp
src/options/: ground_state.hpp  real_time.hpp  theory.hpp
src/perturbations/: ixs.hpp
src/real_time/: crank_nicolson.hpp  etrs.hpp  propagate.hpp  viewables.hpp
src/solvers/: poisson.hpp
src/states/: ks_states.hpp  orbital_set.hpp
src/systems/: cell.hpp  electrons.hpp
src/utils/: finite_difference.hpp
src/wannier/: basis_mapping.hpp  jacobi_eigenvalue.hpp  jade_complex.hpp  plane_rot.hpp  tdmlwf_trans.hpp
tests/: CMakeLists.txt  al_ixs.cpp  bcc_fe.cpp  h2o_hamiltonian.cpp  hydrogen_local.cpp  hydrogen_non_local.cpp  pseudos.cpp
